Added a textarea to hold snippet and added placeholders. Updated README

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>My personal CRUD app</title>
-	<script 
-	src="https://code.jquery.com/jquery-3.3.1.js"
-	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="           
-	crossorigin="anonymous"
-	></script>
-	<script src="app.js"></script>
+  <meta charset="UTF-8">
+  <title>My personal CRUD app</title>
+  <script 
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="           
+  crossorigin="anonymous"
+  ></script>
+  <script src="app.js"></script>
 </head>
 <body>
-  <input class="textField" type="text" name="firstInputField">
+  <input class="textField" type="text" name="firstInputField" placeholder="Snippet Name">
   <button class="setData">Click to save text</button>
   <button class="getData">Click to get text</button>
+
+  <textarea name="textarea" rows="10" cols="50" placeholder="Type snippet code here"></textarea>
 <div class="debug"></div>
 
 <!-- 	<script >
