Added a way to store multiple snippets by converting them to objects and pushing them into a snippets array.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="snippetName">
     <input class="textField" type="text" name="firstInputField" placeholder="Snippet Name">
   </div>
-  <div class="snippetNameButtons">
+<!--   <div class="snippetNameButtons">
     <button class="setData">Click to save snippet name</button>
-    <button class="getData">Click to get snippet name</button>
-  </div>
+    <button class="getData">Click to retrieve previous snippet name</button>
+  </div> -->
   <div class="snippetCode">
     <textarea class="textArea" type="text" rows="10" cols="50" placeholder="Type snippet code here"></textarea>
   </div>
