Added ability to retrieve and display the previous snippet that was saved.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
   </div>
   <div class="snippetCodeButtons">
   	<button class="setSnippet">Save snippet</button>
-    <button class="getSnippet">Retrieve snippet</button>
+    <button class="getSnippet">Retrieve previous snippet</button>
+    <button class="getAllSnippets">Retrieve all snippets</button>
   </div>
-  <div class="debug"></div>
+  <!-- <div class="debug"></div> -->
+  <div class="retrievedSnippetName"></div>
+  <pre class="debug"><code></code></pre>
 
 <!-- 	<script >
 		$(document).ready(function() {
