--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <script src="app.js"></script>
 </head>
 <body>
+  <header>
+  	<div class="jumbotron">
+      <h1 class="display-4">Ricky's Snippets</h1>
+      <p class="lead">This is a simple snippet saving tool directed toward programmers looking for a personalized space to save small segments of code.</p>
+      <hr class="my-4">
+      <p>Use this snippet saving tool for the convenience of having repeat code in one personalized area.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Create Snippet</a>
+    </div>
+  	<!-- <h1>Ricky's Snippets</h1> -->
+  </header>
   <div class="snippetName">
     <input class="textField" type="text" name="firstInputField" placeholder="Snippet Name">
   </div>
@@ -24,6 +34,7 @@
     <textarea class="textArea" type="text" rows="10" cols="50" placeholder="Type snippet code here"></textarea>
   </div>
   <div class="snippetCodeButtons">
+  	<!-- <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button> -->
   	<button class="setSnippet">Save snippet</button>
     <button class="getSnippet">Retrieve previous snippet</button>
     <button class="getAllSnippets">Retrieve all snippets</button>
