--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My personal CRUD app</title>
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script 
@@ -54,7 +55,7 @@
       </div> -->
       <div class="snippetCode">
         <textarea class="textArea form-group shadow-lg p-3 bg-white rounded form-control" type="text" rows="10" cols="50" placeholder="Type snippet code here"></textarea>
-      </div>
+      </div class="form-group">
       <div class="snippetCodeButtons">
         <button class="setSnippet btn btn-primary btn-sm shadow-lg">Save snippet</button>
         <button class="getSnippet btn btn-primary btn-sm shadow-lg">Retrieve previous snippet</button>
@@ -62,7 +63,7 @@
       </div>
       <!-- <div class="debug"></div> -->
       <div class="retrievedSnippetName"></div>
-      <pre class="debug"><code></code></pre>
+      <pre class="debug rounded form-group shadow-lg"><code></code></pre>
     </div>
   </section>
   <footer>
