Implemented search bar functionality.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <!-- search section -->
       <div class="search form-group">
-      	<input class="textField searchTextInput shadow-lg bg-white rounded form-control form-group" type="text" placeholder="Find by snippet name">
+      	<input class="searchField searchTextInput shadow-lg bg-white rounded form-control form-group" type="text" placeholder="Find by snippet name">
         <button class="findButton btn btn-primary btn-sm shadow-lg">Find snippet</button>
       </div class="snippetName form-group">
       <!-- <div class="debug"></div> -->
