Improved design of displayed code.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- buttons -->
       <div class="snippetCodeButtons">
         <button class="setSnippet btn btn-primary btn-sm shadow-lg">Save snippet</button>
-        <button class="getSnippet btn btn-primary btn-sm shadow-lg">Retrieve previous snippet</button>
+        <!-- <button class="getSnippet btn btn-primary btn-sm shadow-lg">Retrieve previous snippet</button> -->
         <button class="getAllSnippets btn btn-primary btn-sm shadow-lg">Retrieve all snippets</button>
       </div>
       <!-- search section -->
