Added nav bar with logo.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 </head>
 <body>
   <header>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="randomScissor.jpg" width="30" height="30" class="d-inline-block align-top" alt="">  My Custom Snippets
+      </a>
+    </nav>
   	<!-- <div>
   	  <nav class="navbar navbar-default">
   		<div class="navbar-header">
@@ -27,7 +32,7 @@
   	  </nav>
   	</div> -->
   	<div class="jumbotron">
-      <h1 class="display-4">Ricky's Snippets</h1>
+      <h1 class="display-4">My Snippets</h1>
       <p class="lead">This is a simple snippet saving tool directed toward programmers looking for a space to save small segments of code.</p>
       <hr class="my-4">
       <p>Use this tool to keep your frequently used functions and blocks of code organized in one area.</p>
